fix: fix off-center pagination button arrows

--- a/src/js/components/pagination/pagination.scss
+++ b/src/js/components/pagination/pagination.scss
@@ -57,6 +57,7 @@
     @extend .button;
 
     display: flex;
+    align-items: center;
 
     border: 1px solid $border-color;
     border-radius: 2px 0 0 2px;
